[gd_scene load_steps=18 format=3 uid="uid://cgfp4pd75dagv"]

[ext_resource type="Script" path="res://Assets/Scripts/Menu/CheckButtonSliderGraphic.gd" id="1_56xp6"]
[ext_resource type="Script" path="res://Assets/Scripts/Menu/SettingsMenu.gd" id="1_h84po"]
[ext_resource type="Script" path="res://Assets/Scripts/Menu/SliderValueLabel.gd" id="1_nqtk5"]
[ext_resource type="Script" path="res://Assets/Scripts/Menu/DropdownButton.gd" id="4_vdnj1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e8wra"]
content_margin_left = 30.0
content_margin_top = 10.0
content_margin_right = 30.0
content_margin_bottom = 30.0
bg_color = Color(0.54902, 0.54902, 0.54902, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.54902, 0.54902, 0.54902, 1)

[sub_resource type="Gradient" id="Gradient_r3bj6"]
offsets = PackedFloat32Array(0.938326, 1)
colors = PackedColorArray(0.72, 0.72, 0.72, 1, 0.72, 0.72, 0.72, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wvwyk"]
gradient = SubResource("Gradient_r3bj6")
width = 28
height = 28
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Gradient" id="Gradient_0y8qj"]
offsets = PackedFloat32Array(0.938326, 1)
colors = PackedColorArray(0.878431, 0.878431, 0.878431, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bdfxh"]
gradient = SubResource("Gradient_0y8qj")
width = 28
height = 28
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yh5hl"]
bg_color = Color(0.144063, 0.144063, 0.144063, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.54902, 0.54902, 0.54902, 1)
border_blend = true
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13
corner_detail = 20
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_reckg"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.244776, 0.244776, 0.244776, 1)
border_blend = true
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13
corner_detail = 20
expand_margin_top = 10.0
expand_margin_right = 14.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18pju"]
bg_color = Color(0.8, 0.8, 0.8, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.44, 0.44, 0.44, 1)
border_blend = true
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13
corner_detail = 20
expand_margin_top = 10.0
expand_margin_right = 14.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jpy0t"]
bg_color = Color(0.392157, 0.392157, 0.392157, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.54902, 0.54902, 0.54902, 1)
border_blend = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gqg06"]
gradient = SubResource("Gradient_r3bj6")
width = 28
height = 28
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dr4ug"]
gradient = SubResource("Gradient_0y8qj")
width = 28
height = 28
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e443s"]
bg_color = Color(0.144063, 0.144063, 0.144063, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.54902, 0.54902, 0.54902, 1)
border_blend = true
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
corner_detail = 20
expand_margin_left = 5.0
expand_margin_top = 15.0
expand_margin_right = 5.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_utgft"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.244776, 0.244776, 0.244776, 1)
border_blend = true
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13
corner_detail = 20
expand_margin_top = 10.0
expand_margin_right = 14.0
expand_margin_bottom = 10.0

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h84po")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e8wra")

[node name="HeaderLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Settings"
horizontal_alignment = 1

[node name="SettingsContainerOffsetter" type="Control" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SettingsOptionsContainer" type="GridContainer" parent="PanelContainer/SettingsContainerOffsetter"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 95.2
offset_right = 400.0
offset_bottom = 295.2
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 15
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_vertical = 1
focus_mode = 0
theme_override_constants/center_grabber = 0
theme_override_icons/grabber = SubResource("GradientTexture2D_wvwyk")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_bdfxh")
theme_override_styles/slider = SubResource("StyleBoxFlat_yh5hl")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_reckg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_18pju")
max_value = 1.0
step = 0.0
value = 0.5
scrollable = false

[node name="ValueLabel" type="Label" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer/MasterVolumeSlider"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -21.5
offset_right = 72.0
offset_bottom = 21.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_jpy0t")
text = "50"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_nqtk5")

[node name="MusicVolumeLabel" type="Label" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_vertical = 1
focus_mode = 0
theme_override_constants/center_grabber = 0
theme_override_icons/grabber = SubResource("GradientTexture2D_wvwyk")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_bdfxh")
theme_override_styles/slider = SubResource("StyleBoxFlat_yh5hl")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_reckg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_18pju")
max_value = 1.0
step = 0.0
value = 0.5
scrollable = false

[node name="ValueLabel" type="Label" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer/MusicVolumeSlider"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -21.5
offset_right = 72.0
offset_bottom = 21.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_jpy0t")
text = "50"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_nqtk5")

[node name="EffectsVolumeLabel" type="Label" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Effects Volume"

[node name="EffectsVolumeSlider" type="HSlider" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_mode = 0
theme_override_constants/center_grabber = 0
theme_override_icons/grabber = SubResource("GradientTexture2D_gqg06")
theme_override_icons/grabber_highlight = SubResource("GradientTexture2D_bdfxh")
theme_override_styles/slider = SubResource("StyleBoxFlat_yh5hl")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_reckg")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_18pju")
max_value = 1.0
step = 0.0
value = 0.5
scrollable = false

[node name="ValueLabel" type="Label" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer/EffectsVolumeSlider"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -21.5
offset_right = 72.0
offset_bottom = 21.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_jpy0t")
text = "50"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_nqtk5")

[node name="InvertInputLabel" type="Label" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Invert Input"

[node name="InvertInputCheck" type="CheckButton" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 0
icon_alignment = 1

[node name="CheckButtonSliderGraphic" type="HSlider" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer/InvertInputCheck"]
custom_minimum_size = Vector2(90, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -25.0
offset_right = 45.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(45, 25)
size_flags_horizontal = 3
size_flags_vertical = 1
focus_mode = 0
mouse_filter = 2
theme_override_constants/center_grabber = 0
theme_override_icons/grabber = SubResource("GradientTexture2D_dr4ug")
theme_override_styles/slider = SubResource("StyleBoxFlat_e443s")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_utgft")
max_value = 1.0
step = 0.0
scrollable = false
script = ExtResource("1_56xp6")
toggleAnimSpeed = 20.0

[node name="WindowModeLabel" type="Label" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Window Mode"

[node name="WindowModeMenu" type="MenuButton" parent="PanelContainer/SettingsContainerOffsetter/SettingsOptionsContainer"]
custom_minimum_size = Vector2(350, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
flat = false
icon_alignment = 1
item_count = 3
popup/item_0/text = "Fullscreen"
popup/item_1/text = "Borderless Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Windowed"
popup/item_2/id = 2
script = ExtResource("4_vdnj1")

[node name="BottomContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="DefaultButton" type="Button" parent="PanelContainer/BottomContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Default
"

[node name="SaveCloseButton" type="Button" parent="PanelContainer/BottomContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Save & Close"

[node name="CloseButton" type="Button" parent="PanelContainer/BottomContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Close"
